[project]
name = "castlez"
version = "0.1.0"
description = "An open world demo made using charz"
authors = [
    { name = "Havsalt" }
]
dependencies = [
    "charz[keyboard]==0.1.0.dev3",
]
readme = "README.md"
license.file = "LICENSE.txt"
requires-python = ">= 3.8"

[project.scripts]
main = "castlez:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/castlez"]
